fixed icon alignment

--- a/src/components/HeroVideoDetails/HeroVideoDetails.scss
+++ b/src/components/HeroVideoDetails/HeroVideoDetails.scss
@@ -80,6 +80,10 @@
 
                     &--icon {
                         padding-right: 0.65rem;
+
+                        @include tablet {
+                            margin: auto;
+                        }
                     }
 
                     &--numbers {
@@ -93,6 +97,10 @@
 
                     &--icon {
                         padding-right: 0.65rem;
+
+                        @include tablet {
+                            margin: auto;
+                        }
                     }
 
                     &--numbers{
